--- a/lista-obj.html
+++ b/lista-obj.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=], initial-scale=1.0">
-        <link rel="stylesheet" href="lista-vet.css"/>
+        <link rel="stylesheet" href="lista-obj.css"/>
         <title>Document</title>
     </head>
     <body>
@@ -16,6 +16,10 @@
             <div>
                 <h2>Exercício 2</h2>
                 <button onclick="exe2()"> Exe 2 </button>
+            </div>
+            <div>
+                <h2>Exercício 3</h2>
+                <button onclick="exe3()"> Exe 3 </button>
             </div>
         </div>    
         <script src="lista-obj.js"> </script>        
