--- a/lista-obj.html
+++ b/lista-obj.html
@@ -21,6 +21,10 @@
                 <h2>Exercício 3</h2>
                 <button onclick="exe3()"> Exe 3 </button>
             </div>
+            <div>
+                <h2>Exercício 4</h2>
+                <button onclick="exe4()"> Exe 4 </button>
+            </div>
         </div>    
         <script src="lista-obj.js"> </script>        
     </body>
