--- a/lista-obj.html
+++ b/lista-obj.html
@@ -25,6 +25,10 @@
                 <h2>Exercício 4</h2>
                 <button onclick="exe4()"> Exe 4 </button>
             </div>
+            <div>
+                <h2>Exercício 5</h2>
+                <button onclick="exe5()"> Exe 5 </button>
+            </div>
         </div>    
         <script src="lista-obj.js"> </script>        
     </body>
