--- a/lista-obj.html
+++ b/lista-obj.html
@@ -30,6 +30,7 @@
                 <button onclick="exe5()"> Exe 5 </button>
             </div>
         </div>    
-        <script src="lista-obj.js"> </script>        
+        <script src="lista-obj.js"> </script>
+        <script src="exBikes.js"> </script>   
     </body>
 </html>
