--- a/lista-obj.html
+++ b/lista-obj.html
@@ -11,26 +11,31 @@
         <div id="container">
             <div>
                 <h2>Exercício 1</h2>
-                <button onclick="exe1()"> Exe 1 </button>
+                <button onclick="exe1()"> Exe </button>
             </div>
             <div>
                 <h2>Exercício 2</h2>
-                <button onclick="exe2()"> Exe 2 </button>
+                <button onclick="exe2()"> Exe </button>
             </div>
             <div>
                 <h2>Exercício 3</h2>
-                <button onclick="exe3()"> Exe 3 </button>
+                <button onclick="exe3()"> Exe </button>
             </div>
             <div>
-                <h2>Exercício 4</h2>
-                <button onclick="exe4()"> Exe 4 </button>
+                <h2>Exercício Filmes</h2>
+                <button onclick="exe4()"> Exe </button>
             </div>
             <div>
-                <h2>Exercício 5</h2>
-                <button onclick="exe5()"> Exe 5 </button>
+                <h2>Exercício Bikes</h2>
+                <button onclick="exBikes()"> Exe </button>
+            </div>
+            <div>
+                <h2>Exercício Farmácia</h2>
+                <button onclick="exFarmacia()"> Exe </button>
             </div>
         </div>    
         <script src="lista-obj.js"> </script>
-        <script src="exBikes.js"> </script>   
+        <script src="exBikes.js"> </script> 
+        <script src="exFarmacia.js"> </script>   
     </body>
 </html>
