--- a/lista-obj.html
+++ b/lista-obj.html
@@ -33,9 +33,14 @@
                 <h2>Exercício Farmácia</h2>
                 <button onclick="exFarmacia()"> Exe </button>
             </div>
+            <div>
+                <h2>Exercício Políticos</h2>
+                <button onclick="exPoliticos()"> Exe </button>
+            </div>
         </div>    
         <script src="lista-obj.js"> </script>
-        <script src="exBikes.js"> </script> 
-        <script src="exFarmacia.js"> </script>   
+        <script src="exBikes.js"> </script>
+        <script src="exFarmacia.js"> </script>
+        <script src="exPoliticos.js"> </script>
     </body>
 </html>
